Integrate Sequelize ORM and update DAOs to manipulate data in mysql database.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,10 @@
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
-    "inlineSourceMap": true
+    "inlineSourceMap": true,
+    "resolveJsonModule": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "skipLibCheck": true
   }
 }
