--- a/package.json
+++ b/package.json
@@ -11,30 +11,40 @@
     "lint": "npx eslint . --fix",
     "migrate": "npx sequelize-cli db:create && npx sequelize-cli db:migrate",
     "migrateAndStart": "npm run migrate && npm run start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register 'tests/**/*.test.ts' --unhandled-rejections=strict",
+    "test-debug": "export DEBUG=* && npm test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@tsconfig/node14": "^1.0.1",
+    "@types/chai": "^4.3.1",
+    "@types/chai-http": "^4.2.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
+    "@types/mocha": "^9.1.1",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.25",
     "@types/shortid": "0.0.29",
+    "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.2",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
+    "chai": "^4.3.6",
     "eslint": "^8.14.0",
+    "mocha": "^9.2.2",
     "nodemon": "^2.0.15",
     "source-map-support": "^0.5.21",
+    "supertest": "^6.2.2",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
   "dependencies": {
     "@types/sequelize": "^4.28.11",
+    "chai-http": "^4.3.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
